# OEPlanner

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: api-deploy.yml  worker-deploy.yml
deploy/bicep/: resources.bicep
src/BACKEND/OEPlannerAPI/: Dockerfile
src/BACKEND/OEPlannerAPI/oeplannerapi/: main.py
src/BACKEND/OEPlannerTasks/: pyproject.toml
src/BACKEND/OEPlannerTasks/oeplannertasks/: app_asb_conf.py  app_rmq_conf.py  tasks.py
src/BACKEND/OEPlannerWorker/: Dockerfile  pyproject.toml
src/BACKEND/OEPlannerWorker/oeplannerworker/: celery_app.py
src/BACKEND/oeplannerapi/: Dockerfile  pyproject.toml
src/BACKEND/oeplannerapi/oeplannerapi/: main.py
src/BACKEND/oeplannertasks/oeplannertasks/: celery_app.py
src/BACKEND/oeplannerworker/: Dockerfile  pyproject.toml
src/BACKEND/oeplannerworker/oeplannerworker/: main.py
