[tool.poetry]
name = "oeplanner"
version = "0.1.0"
description = "Over Engineered Planner"
authors = ["Misc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oeplannerworker = {path = "./src/BACKEND/oeplannerworker"}
oeplannerapi = {path = "./src/BACKEND/oeplannerapi"}
oeplannertasks = {path = "./src/BACKEND/oeplannertasks"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
